Update pipeline code and documentation